# docs/core/swagger.json
@@ -65,19 +65,19 @@
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Resource not found",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     }
                 }
@@ -145,13 +145,13 @@
                     "400": {
                         "description": "Invalid request",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     }
                 }
@@ -212,13 +212,13 @@
                     "400": {
                         "description": "Invalid request",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     }
                 }
@@ -253,13 +253,13 @@
                     "400": {
                         "description": "Invalid request",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     }
                 }
@@ -297,13 +297,13 @@
                     "400": {
                         "description": "Invalid request",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     }
                 }
@@ -350,13 +350,13 @@
                     "400": {
                         "description": "Invalid request",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     }
                 }
@@ -391,13 +391,13 @@
                     "400": {
                         "description": "Invalid request",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     }
                 }
@@ -437,19 +437,19 @@
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Resource not found",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     }
                 }
@@ -496,19 +496,19 @@
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Resource not found",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     }
                 }
@@ -571,13 +571,13 @@
                     "400": {
                         "description": "Invalid request",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     }
                 }
@@ -623,13 +623,13 @@
                     "400": {
                         "description": "Invalid request",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     }
                 }
@@ -669,13 +669,13 @@
                     "400": {
                         "description": "Invalid request",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/common.ErrorResponse"
+                            "$ref": "#/definitions/github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse"
                         }
                     }
                 }
@@ -683,7 +683,7 @@
         }
     },
     "definitions": {
-        "common.ErrorResponse": {
+        "github_com_mandacode-com_serengeti_internal_adapter_handler_common.ErrorResponse": {
             "type": "object",
             "properties": {
                 "code": {
