# internal/adapter/handler/identify_user/identify_by_token.go
@@ -6,6 +6,7 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/mandacode-com/merr"
+	_ "github.com/mandacode-com/serengeti/internal/adapter/handler/common"
 	clientappval "github.com/mandacode-com/serengeti/internal/domain/clientapp/value"
 	"github.com/mandacode-com/serengeti/internal/domain/shared"
 	"github.com/mandacode-com/serengeti/internal/port/in"
@@ -52,8 +53,8 @@ func toIdentifyByTokenResponse(view *in.UserIdentityView) *IdentifyByTokenRespon
 // @Param client_app_id query string true "Client Application ID"
 // @Param client_app_secret query string true "Client Application Secret"
 // @Success 200 {object} IdentifyByTokenResponse "User identity information"
-// @Failure 400 {object} common.ErrorResponse "Invalid request"
-// @Failure 500 {object} common.ErrorResponse "Internal server error"
+// @Failure 400 {object} merrmid.ErrorResponse "Invalid request"
+// @Failure 500 {object} merrmid.ErrorResponse "Internal server error"
 // @Router /auth/identify-by-token [get]
 func (h *Handler) IdentifyByToken(c *gin.Context) {
 	ctx := c.Request.Context()
@@ -101,3 +102,4 @@ func (h *Handler) IdentifyByToken(c *gin.Context) {
 	response := toIdentifyByTokenResponse(view)
 	c.JSON(http.StatusOK, response)
 }
+
