# internal/adapter/handler/weboauth_mgmt/register.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/mandacode-com/merr"
+	_ "github.com/mandacode-com/serengeti/internal/adapter/handler/common"
 	clientappval "github.com/mandacode-com/serengeti/internal/domain/clientapp/value"
 	"github.com/mandacode-com/serengeti/internal/domain/shared"
 	"github.com/mandacode-com/serengeti/internal/port/in"
@@ -37,8 +38,8 @@ func toRegisterWebOAuthResponse() *RegisterWebOAuthResponse {
 // @Produce json
 // @Param request body RegisterWebOAuthRequest true "OAuth registration request"
 // @Success 201 {object} RegisterWebOAuthResponse "OAuth registered successfully"
-// @Failure 400 {object} common.ErrorResponse "Invalid request"
-// @Failure 500 {object} common.ErrorResponse "Internal server error"
+// @Failure 400 {object} merrmid.ErrorResponse "Invalid request"
+// @Failure 500 {object} merrmid.ErrorResponse "Internal server error"
 // @Router /weboauth/register [post]
 func (h *Handler) RegisterWebOAuth(c *gin.Context) {
 	ctx := c.Request.Context()
